removed migration mode
Signed-off-by: Lazar Petrovic <lpetrovic05@gmail.com>