@@ -198,27 +198,16 @@ public class ConsensusImpl extends ThreadSafeConsensusInfo implements Consensus 
      * round for events
      */
     private InitJudges initJudges = null;
-    /**
-     * Migration mode is used to migrate from an old state which saves consensus events and does
-     * not have judge hashes. Since we don't have the judge hashes, we can't calculate the round
-     * number of new events. So we use the round number from the events from state to calculate
-     * the round number of new events. This is only used for one round after loading an old state.
-     */
-    private boolean migrationMode = false;
-
-    /**
-     * The ancient mode used to determine if an event is ancient or not.
-     */
-    private AncientMode ancientMode;
-
+    /** The ancient mode used to determine if an event is ancient or not. */
+    private final AncientMode ancientMode;
     /** The marker file writer */
-    private MarkerFileWriter markerFileWriter;
+    private final MarkerFileWriter markerFileWriter;
     /** The rate limited logger for rounds without a super majority of weight on judges */
-    private RateLimitedLogger noSuperMajorityLogger;
+    private final RateLimitedLogger noSuperMajorityLogger;
     /** The rate limited logger for rounds with no judge */
-    private RateLimitedLogger noJudgeLogger;
+    private final RateLimitedLogger noJudgeLogger;
     /** The rate limited logger for coin rounds */
-    private RateLimitedLogger coinRoundLogger;
+    private final RateLimitedLogger coinRoundLogger;
 
     /**
      * A flag that signals if we are currently replaying the PCES or not.
@@ -715,8 +704,6 @@ public class ConsensusImpl extends ThreadSafeConsensusInfo implements Consensus 
      * @return the consensus round
      */
     private @NonNull ConsensusRound roundDecided(final RoundElections roundElections) {
-        // if migration was enabled, we can turn it off now since we've decided fame for this round
-        migrationMode = false;
         // the current round just had its fame decided.
         // Note: more witnesses may be added to this round in the future, but they'll all be
         // instantly marked as not famous.
@@ -771,7 +758,7 @@ public class ConsensusImpl extends ThreadSafeConsensusInfo implements Consensus 
         return new ConsensusRound(
                 roster,
                 consensusEvents,
-                recentEvents.get(recentEvents.size() - 1).getBaseEvent(),
+                recentEvents.getLast().getBaseEvent(),
                 new Generations(this),
                 new EventWindow(decidedRoundNumber, nonAncientThreshold, nonExpiredThreshold, ancientMode),
                 new ConsensusSnapshot(
@@ -875,9 +862,7 @@ public class ConsensusImpl extends ThreadSafeConsensusInfo implements Consensus 
      *     consensus order)
      */
     private void setConsensusOrder(@NonNull final Collection<EventImpl> events) {
-        EventImpl last = null;
         for (final EventImpl e : events) {
-            last = e;
             // the minimum timestamp for this event
             final Instant minTimestamp =
                     lastConsensusTime == null ? null : ConsensusUtils.calcMinTimestampForNextEvent(lastConsensusTime);
@@ -1143,11 +1128,8 @@ public class ConsensusImpl extends ThreadSafeConsensusInfo implements Consensus 
         // events older than all the judges in the latest decided round as well as consensus events
         // have a round of -infinity. this covers ancient events as well because the ancient
         // generation will always be older than the latest decided round generation
-        // NOTE: during migration we just check for ancient, because we don't know the judges
         //
-        if ((!migrationMode && rounds.isOlderThanDecidedRoundGeneration(x))
-                || (migrationMode && ancient(x))
-                || x.isConsensus()) {
+        if (rounds.isOlderThanDecidedRoundGeneration(x) || x.isConsensus()) {
             x.setRoundCreated(ConsensusConstants.ROUND_NEGATIVE_INFINITY);
             return ConsensusConstants.ROUND_NEGATIVE_INFINITY;
         }
